updates with package grapgh

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(approxfunDataFrame)
 export(extract.geotop.value.fromMap)
 export(geotopExec)
 export(geotopGOF)
+export(geotopLookUpTable)
 export(geotopPSO)
 export(geotoplhoat)
 export(integratefunDataFrame)
