--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,15 +4,15 @@ License: GPL (>= 2)
 Title: An R Plug-in to calibrate soil moisture output of the Distributed
     Hydrological Model GEOtop
 Type: Package
-Author: Emanuele Cordano,...
+Author: Emanuele Cordano, Giacomo Bertoldi
 Description: It uses functions that launches simulation of the Physically-based
     Hydrological Distributed Models are developed. Wrapper function for the
     computation of Goodness-of-Fit indices and PSO Calibration/Optimization of
     the hydrological model GEOtop are included. Technical details about the
     model are available in Endrizzi et al, 2014.
     (http://www.geosci-model-dev.net/7/2831/2014/gmd-7-2831-2014.html).
-Version: 0.8.5.7
-Date: 2016-10-28
+Version: 0.8.5.9
+Date: 2016-10-20
 Repository: Github
 Depends:
     R (>= 2.10),geotopbricks (>= 1.3.7),hydroPSO,hydroGOF,soilwater
