--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,9 @@ Repository: Github
 Depends:
     R (>= 2.10),geotopbricks (>= 1.3.7),hydroPSO,hydroGOF,soilwater
 Imports:
-   stringr,zoo,raster
+   stringr,zoo,raster,knitr
+Suggests: Rmpi,igraph,snow
+VignetteBuilder: knitr
 URL: https://github.com/ecor/geotopbricks,http://code.google.com/p/
     geotop/,https://github.com/se27xx/GEOtop,http://www.geosci-model-dev.net/
     7/2831/2014/gmd-7-2831-2014.html
