--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ importFrom(stringr,str_split)
 importFrom(stringr,str_sub)
 importFrom(stringr,str_trim)
 importFrom(utils,read.table)
+importFrom(utils,str)
 importFrom(utils,write.table)
 importFrom(zoo,"index<-")
 importFrom(zoo,'index<-')
